# carbide

./: .gitignore  LICENSE  README.md  TODO.adoc  cspell.json  pyproject.toml
carbide/: config.py  exception.py  local.py
carbide/cli/: gen_description_from_script.py  root.py
carbide/tools/timeline/: timeline.py  timeline_demo.py
scripts/: color_picker.sh  common_utilities.sh  copy_all_files_with_name.py  copy_all_files_with_name.sh
tests/: conftest.py  test_copy_all_files_with_name.py  test_exception.py  test_gen_description_from_script.py  test_local.py
tests/data/: script_with_description.sh
